add README file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
     "types": ["node", "vite/client"],
-    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
+    "target": "ES2020",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "baseUrl": "./",
     "jsx": "react-jsx",
     "paths": {
@@ -19,5 +22,8 @@
       "@contexts/*": ["src/contexts/*"]
     }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts"],
+  "ts-node": {
+    "esm": true
+  }
 }
