--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^3.6.2",
     "sass": "^1.93.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vite": "^7.1.12",
     "vite-plugin-sass-dts": "^1.3.34"
@@ -39,7 +40,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "fetch:data": "ts-node scripts/fetchMovies.ts"
+    "fetch:data": "tsx src/scripts/fetchMovies.ts"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
